Updated the CORS Configuration